<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Register"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout2"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="@+id/tableLayout2"
        app:layout_constraintTop_toTopOf="@+id/tableLayout2"
        app:layout_constraintVertical_bias="0.927" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout2"
        app:layout_constraintHorizontal_bias="0.803"
        app:layout_constraintStart_toStartOf="@+id/tableLayout2"
        app:layout_constraintTop_toTopOf="@+id/tableLayout2"
        app:layout_constraintVertical_bias="0.928" />

    <Space
        android:id="@+id/space"
        android:layout_width="277dp"
        android:layout_height="495dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="283dp"
        android:layout_height="match_parent"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView_fName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="First Name" />

            <EditText
                android:id="@+id/editText_fName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView_lName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Last Name" />

            <EditText
                android:id="@+id/editText_lName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email" />

            <EditText
                android:id="@+id/editText_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView_Password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Password" />

            <EditText
                android:id="@+id/editText_Password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView_Message"
        android:layout_width="174dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout2"
        app:layout_constraintHorizontal_bias="0.409"
        app:layout_constraintStart_toStartOf="@+id/tableLayout2"
        app:layout_constraintTop_toTopOf="@+id/tableLayout2"
        app:layout_constraintVertical_bias="0.732" />

</androidx.constraintlayout.widget.ConstraintLayout>